Eliminate testing console and testing variable

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<body ng-controller="controller">
 		<div class="space">
 			<div class="container">
-					<p id="quote" >"test" <br>--Norton Juster</p>
+					<p id="quote" >"quote" <br>--Norton Juster</p>
 					<!-- fb start -->
 					<div class="container">
 					<div class="text-center">
@@ -126,7 +126,7 @@
 			}
 		})
 		.error(function(result){
-			console.log("fffffffffffff");
+			console.log("Sorry you encounter an error!");
 		});
 		}]);
 		</script>
