--- a/question.html
+++ b/question.html
@@ -265,7 +265,7 @@
                 </div>
             </div>
             <!-- The Questions -->
-            <span class="" ng-repeat="todo in todos |filter: {roomId : roomId}|questionFilter_2|questionFilter:maxQuestion "
+            <span class="" ng-repeat="todo in todos |filter: {roomId : roomId}|questionFilter:maxQuestion "
             ng-class="{editing: todo == editedTodo}">
                 <div class="card" ng-switch on="todo.headLastChar" ng-style = "{'opacity': (1 + todo.echo * 0.05 >= 0.1) ? 1 + todo.echo * 0.05 : 0.1}">
                     <div class="container-fluid clearfix">
