--- a/homepage.html
+++ b/homepage.html
@@ -303,9 +303,9 @@
 						document.getElementById('question1').style.fontSize="18px";
 						document.getElementById('question2').style.fontSize="18px";
 						//question title get
-						document.getElementById('question0').innerHTML=result.questions[firstIndex];
-						document.getElementById('question1').innerHTML=result.questions[secondIndex];
-						document.getElementById('question2').innerHTML=result.questions[thirdIndex];
+						document.getElementById('question0').innerHTML=result.questions[firstIndex].head;
+						document.getElementById('question1').innerHTML=result.questions[secondIndex].head;
+						document.getElementById('question2').innerHTML=result.questions[thirdIndex].head;
 					}
 					
 					$scope.likes = totalLike;
