--- a/homepage.html
+++ b/homepage.html
@@ -209,9 +209,9 @@
 							var thisdislike = result.questions[i].downVote;
 							document.getElementById('like'+i).innerHTML=thislike - thisdislike;
 							document.getElementById('likes'+i).style.display='';
-							document.getElementById('questions'+i).innerHTML=result.questions[i].head;
-							document.getElementById('questions'+i).style.fontSize="18px";
-							document.getElementById('questions'+i).style.color="rgb(70,70,70)";
+							document.getElementById('question'+i).innerHTML=result.questions[i].head;
+							document.getElementById('question'+i).style.fontSize="18px";
+							document.getElementById('question'+i).style.color="rgb(70,70,70)";
 						}
 
 					}
