Button configuration update for login-after

--- a/index.html
+++ b/index.html
@@ -123,6 +123,8 @@
 				document.getElementById("logout").style.float="right";
 				document.getElementById("notLogin").innerHTML="Homepage";
 				document.getElementById("notLogin").setAttribute("href","homepage.html");
+				document.getElementById("notLogin").style.float="right";
+				document.getElementById("notLogin").style.marginLeft="5px";
 			}
 		})
 		.error(function(result){
