--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 				$scope.username = result.fb.name;
 				document.getElementById("user").innerHTML="Choose your CarryRoom "+result.fb.name;
 				document.getElementById("user").style.fontSize="20px";
-				document.getElementById("user").style.display="inline";
+				//document.getElementById("user").style.display="inline";
 				document.getElementById("welcome").style.display="none";
 				document.getElementById("logout").style.display="";
 				document.getElementById("logout").style.float="right";
